Add Register Endpoint
